# KazusaAIChatbot

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  README_CN.md  TEST_PLAN.md  TODO.md  docker-compose.yml  eval_results.json  kazusa_pipeline.drawio  llm_test_helpers.py  probe_breaking_changes.py  probe_dialog_agent.py  probe_memory_retriever.py  probe_rag_redesign.py  pyproject.toml  pytest.ini  requirements.txt  run_linguistic_texture_test.py  windbg_062626-17968-01_analysis.txt
.claude/: settings.local.json
.windsurf/rules/: virtualenv.md
.windsurf/skills/: scripts_guide.md
Development Plans/: DEVELOPMENT_PLAN.md  STAGE2.md
development_plans/: BUGFIX.md  CLEANUP_2026_04_21.md  CONTINUATION_RESOLUTION_BEFORE_EXTERNAL_RAG.md  LINGUISTIC_TEXTURE_PROFILE_INTEGRATION.md  PIPELINE_HISTORY_REFACTOR.md  RAG1_decommission_plan.md  RAG_REDESIGN.md  RAG_SUPERVISOR2_INNER_LOOP_AGENTS_PLAN.md  README.md  SHORT_CIRCUIT_EARLY_STOP_PLAN.md  STAGE1.md  THIRD_PARTY_RECENT_CONVERSATION_RECALL_PLAN.md  TODO.md  USER_PROFILE_MEMORY_PLAN.md  cache2_agent_stats_health_plan.md  character_local_time_context_plan.md  character_profile_runtime_state_split_plan.md  character_reflection_cycle_stage1_plan.md  character_reflection_cycle_stage1a_plan.md  character_self_words_retrieval_delivery_receipt_plan.md  cognition_silence_short_circuit_and_dialog_evaluator_quality_plan.md  cognition_state_integrity_plan.md  consolidation_evidence_hardening_plan.md  conversation_progress_flow_phase2_plan.md  conversation_progress_phase3_quality_plan.md  conversation_progress_state_plan.md  get_db_private_boundary_plan.md  global_input_queue_plan.md  group_chat_noise_relevance_plan.md  identity_free_memory_output_contract_plan.md  interaction_style_image_plan.md  llm_routing_migration_plan.md  memory_evidence_scoped_user_continuity_plan.md  memory_evolution_stage1b_plan.md  native_shape_boundary_hardening_plan.md  proactive_reflection_cognition_stage2_plan.md  prompt_safe_message_context_plan.md  rag2_phase4_continuation_plan.md  rag_cache2_design.md  rag_cache2_persistent_initializer_plan.md  (+10 more)
development_plans/long_term/: todo.md
development_plans/reference/: documentation_harmonization_audit_report.md  multi_source_cognition_stage_03_inactive_prompt_variant_notes.md
docs/: DOCUMENTATION_GUIDE.md  HOWTO.md  SUBAGENT_INTERFACES.md
experiments/: .gitignore
experiments/rag_hybrid_search/: README.md  __init__.py  cases.json  hybrid_search.py  (+2 more)
personalities/: example.json
scripts/: __init__.py  drop_legacy_rag_collections.py  inject_knowledge.py  run_coding_agent_benchmark.py  run_rag2_e2e_case.py  run_touched_llm_regression.py  validate_rag2_public_evidence_artifacts.py
src/: db.py  discord_bot.py  graph.py  main.py  mcp_client.py  tools.py  utils.py
test_artifacts/: .gitignore
tests/: build_real_history_personality_report.py  cognition_baseline_comparison.py  cognition_baseline_worker.py  cognition_core_v2_live_llm_role_guards.py  cognition_core_v2_test_helpers.py  cognition_llm_producer_inventory.py  cognition_stage_connection_cases.py  conftest.py  l2d_action_initializer_cases.py  l2d_action_selection_cases.py  live_llm_mongo.py  llm_trace.py  stage3_fresh_database.py  test_accepted_task_lifecycle.py  test_accepted_task_prompt_contract.py  test_action_router_payload.py  test_action_router_prompt_contract.py  test_action_selection_media_affordance.py  test_action_selection_payload.py  test_action_selection_prompt_contract.py  test_action_spec_attempt_ledger.py  test_action_spec_evaluator.py  test_action_spec_future_cognition.py  test_action_spec_memory_lifecycle.py  test_action_spec_models.py  test_action_spec_results.py  test_action_spec_self_cognition_bridge.py  test_adapter_envelope_normalizers.py  test_adapter_outbound_sequence.py  test_adapter_readable_mentions_live_llm.py  test_assembler.py  test_attachment_handler.py  test_background_artifact_delivery.py  test_background_artifact_jobs.py  test_background_artifact_runtime.py  test_background_artifact_worker.py  test_background_artifact_worker_live_llm.py  test_background_work_coding_agent.py  test_background_work_delivery.py  test_background_work_future_speak.py  (+481 more)
(+1336 files in other folders)
