[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kazusa_ai_chatbot"
version = "0.1.0"
description = "A Discord AI chatbot with personality and memory"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "eamars"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "openai>=1.0",
    "discord.py>=2.3",
    "motor>=3.3",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "mcp>=1.0.0",
    "json-repair>=0.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
create-embeddings = "scripts.create_conversation_history_embedding:async_main"
create-user-facts-embeddings = "scripts.create_user_facts_embedding:async_main"
search-conversations = "scripts.search_conversation:async_main"
search-user-facts = "scripts.search_user_facts:async_main"
debug-supervisor-speech = "scripts.debug_supervisor_speech:async_main"
kazusa-ai-chatbot = "kazusa_ai_chatbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kazusa_ai_chatbot*", "scripts*"]

[tool.setuptools.package-data]
src = ["*.py"]
