[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kazusa_ai_chatbot"
version = "0.1.0"
description = "A Discord AI chatbot with personality and memory"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "eamars"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "openai>=1.0",
    "discord.py>=2.3",
    "motor>=3.3",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "numpy>=1.24",
    "mcp>=1.0.0",
    "json-repair>=0.58.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
create-embeddings = "scripts.create_conversation_history_embedding:async_main"
search-conversations = "scripts.search_conversation:async_main"
identify-user-image = "scripts.identify_user_image:async_main"
export-chat-history = "scripts.export_chat_history:async_main"
export-user-profile = "scripts.export_user_profile:async_main"
export-user-image = "scripts.export_user_image:async_main"
export-user-memories = "scripts.export_user_memories:async_main"
export-memory = "scripts.export_memory:async_main"
manage-memory-knowledge = "scripts.manage_memory_knowledge:async_main"
export-character-state = "scripts.export_character_state:async_main"
export-collection = "scripts.export_collection:async_main"
debug-supervisor-speech = "scripts.debug_supervisor_speech:async_main"
migrate-user-profile-memories = "scripts.migrate_user_profile_memories:main"
kazusa-ai-chatbot = "kazusa_ai_chatbot.main:main"
kazusa-brain = "kazusa_ai_chatbot.service:app"
kazusa-discord-adapter = "adapters.discord_adapter:main"
kazusa-debug-adapter = "adapters.debug_adapter:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kazusa_ai_chatbot*", "scripts*", "adapters*"]

[tool.setuptools.package-data]
src = ["*.py"]
